// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Asset Matching ActionsToolbox 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "marginTop": "0.625rem",
      }
    }
  >
    <h2>
      ⬇️Toolbox for actions can be used separately for handling bulk actions⬇️
    </h2>
    <div
      css={
        Object {
          "map": undefined,
          "name": "qmf9se",
          "next": undefined,
          "styles": "
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
",
          "toString": [Function],
        }
      }
    >
      <div
        css={
          Object {
            "map": undefined,
            "name": "qmf9se",
            "next": undefined,
            "styles": "
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
",
            "toString": [Function],
          }
        }
      >
        <div
          css={[Function]}
          data-testid="primary_action"
        >
          <button
            className="css-1v3xdr2-Button"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="css-1xr6sam-Button"
            >
              <span
                className="css-1kner5m-Button"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-116ea5o-Icon"
                  />
                </span>
              </span>
              <span
                className="css-5zv1of-Button"
              >
                Confirm
              </span>
            </span>
          </button>
        </div>
        <div
          css={[Function]}
          data-testid="primary_action"
        >
          <button
            className="css-1v3xdr2-Button"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="css-1xr6sam-Button"
            >
              <span
                className="css-1kner5m-Button"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-116ea5o-Icon"
                  />
                </span>
              </span>
              <span
                className="css-5zv1of-Button"
              >
                Reject
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        role="button"
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "1i430ov",
              "next": undefined,
              "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  position: relative;
",
              "toString": [Function],
            }
          }
        >
          <div
            css={[Function]}
          >
            <button
              className="css-12o7hk-IconButton"
              color="neutralBlack-700"
              data-testid="icon-button-menu_btn"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-1k5aruc-Icon"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Asset Matching AssetMatching 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <button
      css={
        Object {
          "marginBottom": "0.625rem",
          "marginRight": "0.625rem",
        }
      }
      onClick={[Function]}
    >
      add action
    </button>
    <button
      onClick={[Function]}
    >
      clear actions
    </button>
    <button
      css={
        Object {
          "marginBottom": "0.625rem",
          "marginLeft": "0.625rem",
        }
      }
      onClick={[Function]}
    >
      reset actions
    </button>
    <button
      css={
        Object {
          "marginBottom": "0.625rem",
          "marginLeft": "0.625rem",
        }
      }
      onClick={[Function]}
    >
      check from outside
    </button>
    <section
      css={[Function]}
    >
      <div
        css={
          Object {
            "map": undefined,
            "name": "ctdg1z",
            "next": undefined,
            "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  flex-direction: column;
  width: 100%;
",
            "toString": [Function],
          }
        }
      >
        <header
          className="css-1kw7jcc-SectionHeader"
        >
          <div
            className="css-zj67xr-CheckBoxContainer"
          >
            <span
              className="css-58ep04-CheckBox"
            >
              <span
                className="css-16p0htb-CheckBox"
              >
                <input
                  checked={false}
                  className="css-j33lnh-CheckBox"
                  data-testid="checkbox"
                  disabled={false}
                  id="styled-checkbox-"
                  onChange={[Function]}
                  type="checkbox"
                />
                <label
                  htmlFor="styled-checkbox-"
                />
              </span>
            </span>
            <div
              className="css-zj67xr-CheckBoxContainer"
            >
              <span
                className="css-1978th8-CheckBoxContainer"
              >
                95%
              </span>
              <span
                className="css-wiu3iz-CheckBoxContainer"
              >
                Probability
                <br />
                 Score
              </span>
            </div>
          </div>
          <div
            css={
              Object {
                "map": undefined,
                "name": "qmf9se",
                "next": undefined,
                "styles": "
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
",
                "toString": [Function],
              }
            }
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "qmf9se",
                  "next": undefined,
                  "styles": "
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
",
                  "toString": [Function],
                }
              }
            >
              <div
                css={[Function]}
                data-testid="primary_action"
              >
                <button
                  className="css-12f1twq-Button"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                >
                  <span
                    className="css-1xr6sam-Button"
                  >
                    <span
                      className="css-1kner5m-Button"
                    >
                      <span
                        className="css-1gnbc76-Icon"
                        onClick={[Function]}
                      >
                        <span
                          className="css-116ea5o-Icon"
                        />
                      </span>
                    </span>
                    <span
                      className="css-5zv1of-Button"
                    >
                      Confirm
                    </span>
                  </span>
                </button>
              </div>
              <div
                css={[Function]}
                data-testid="primary_action"
              >
                <button
                  className="css-12f1twq-Button"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                >
                  <span
                    className="css-1xr6sam-Button"
                  >
                    <span
                      className="css-1kner5m-Button"
                    >
                      <span
                        className="css-1gnbc76-Icon"
                        onClick={[Function]}
                      >
                        <span
                          className="css-116ea5o-Icon"
                        />
                      </span>
                    </span>
                    <span
                      className="css-5zv1of-Button"
                    >
                      Reject
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              role="button"
            >
              <div
                css={
                  Object {
                    "map": undefined,
                    "name": "1i430ov",
                    "next": undefined,
                    "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  position: relative;
",
                    "toString": [Function],
                  }
                }
              >
                <div
                  css={[Function]}
                >
                  <button
                    className="css-12o7hk-IconButton"
                    color="neutralBlack-700"
                    data-testid="icon-button-menu_btn"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-1k5aruc-Icon"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </header>
        <div
          css={[Function]}
        >
          <article
            css={[Function]}
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "1qasdci",
                  "next": undefined,
                  "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  justify-content: space-between;
  width: 100%;
",
                  "toString": [Function],
                }
              }
            >
              <div
                css={
                  Object {
                    "map": undefined,
                    "name": "97an4l",
                    "next": undefined,
                    "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  flex-direction: column;
",
                    "toString": [Function],
                  }
                }
              >
                <p
                  css={[Function]}
                >
                  Owned Recording
                </p>
                <div
                  css={
                    Object {
                      "map": undefined,
                      "name": "qmf9se",
                      "next": undefined,
                      "styles": "
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
",
                      "toString": [Function],
                    }
                  }
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-4szf62-Icon"
                    />
                  </span>
                  <h3
                    css={[Function]}
                  >
                    Too Funky
                  </h3>
                </div>
                <p
                  css={[Function]}
                >
                  ISWC: KS39729323
                </p>
              </div>
              <div
                css={
                  Object {
                    "map": undefined,
                    "name": "zs17b",
                    "next": undefined,
                    "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  align-items: start;
",
                    "toString": [Function],
                  }
                }
              >
                <p
                  css={[Function]}
                >
                  Linked Sound 
                  <br />
                   Recordings
                </p>
                <span
                  css={[Function]}
                >
                  234
                </span>
              </div>
            </div>
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "r5p8pp",
                  "next": undefined,
                  "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  flex-direction: column;
  align-items: baseline;
",
                  "toString": [Function],
                }
              }
            >
              <div
                css={
                  Object {
                    "map": undefined,
                    "name": "eo84ck",
                    "next": undefined,
                    "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  order: 1;
  align-items: baseline;
  justify-content: space-between;
",
                    "toString": [Function],
                  }
                }
              >
                <h4
                  css={[Function]}
                >
                  Artists
                </h4>
                <div
                  css={
                    Object {
                      "map": undefined,
                      "name": "h9kp2x",
                      "next": undefined,
                      "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  flex-wrap: wrap;
",
                      "toString": [Function],
                    }
                  }
                >
                  <p
                    className=""
                    css={[Function]}
                    data-itemid="george-michael"
                    data-testid="george-michael"
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                  >
                    George Michael
                  </p>
                </div>
              </div>
              <div
                css={
                  Object {
                    "map": undefined,
                    "name": "ffu30o",
                    "next": undefined,
                    "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  order: 0;
  align-items: baseline;
  justify-content: space-between;
",
                    "toString": [Function],
                  }
                }
              >
                <h4
                  css={[Function]}
                >
                  Writers
                </h4>
                <div
                  css={
                    Object {
                      "map": undefined,
                      "name": "h9kp2x",
                      "next": undefined,
                      "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  flex-wrap: wrap;
",
                      "toString": [Function],
                    }
                  }
                >
                  <p
                    className=""
                    css={[Function]}
                    data-itemid="george-michael"
                    data-testid="george-michael"
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                  >
                    George Michael
                  </p>
                </div>
              </div>
            </div>
          </article>
          <article
            css={[Function]}
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "1qasdci",
                  "next": undefined,
                  "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  justify-content: space-between;
  width: 100%;
",
                  "toString": [Function],
                }
              }
            >
              <div
                css={
                  Object {
                    "map": undefined,
                    "name": "97an4l",
                    "next": undefined,
                    "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  flex-direction: column;
",
                    "toString": [Function],
                  }
                }
              >
                <p
                  css={[Function]}
                >
                  Owned Composition
                </p>
                <div
                  css={
                    Object {
                      "map": undefined,
                      "name": "qmf9se",
                      "next": undefined,
                      "styles": "
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
",
                      "toString": [Function],
                    }
                  }
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-4szf62-Icon"
                    />
                  </span>
                  <h3
                    css={[Function]}
                  >
                    Waiting for That Day
                  </h3>
                </div>
                <p
                  css={[Function]}
                >
                  ISWC: KS39729323
                </p>
              </div>
              <div
                css={
                  Object {
                    "map": undefined,
                    "name": "zs17b",
                    "next": undefined,
                    "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  align-items: start;
",
                    "toString": [Function],
                  }
                }
              >
                <p
                  css={[Function]}
                >
                  Linked Sound 
                  <br />
                   Recordings
                </p>
                <span
                  css={[Function]}
                >
                  234
                </span>
              </div>
            </div>
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "r5p8pp",
                  "next": undefined,
                  "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  flex-direction: column;
  align-items: baseline;
",
                  "toString": [Function],
                }
              }
            >
              <div
                css={
                  Object {
                    "map": undefined,
                    "name": "eo84ck",
                    "next": undefined,
                    "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  order: 1;
  align-items: baseline;
  justify-content: space-between;
",
                    "toString": [Function],
                  }
                }
              >
                <h4
                  css={[Function]}
                >
                  Writers
                </h4>
                <div
                  css={
                    Object {
                      "map": undefined,
                      "name": "h9kp2x",
                      "next": undefined,
                      "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  flex-wrap: wrap;
",
                      "toString": [Function],
                    }
                  }
                >
                  <p
                    className=""
                    css={[Function]}
                    data-itemid="george-michael"
                    data-testid="george-michael"
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                  >
                    George Michael
                  </p>
                  <p
                    className=""
                    css={[Function]}
                    data-itemid="mick-jagger"
                    data-testid="mick-jagger"
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                  >
                    Mick Jagger
                  </p>
                  <p
                    className=""
                    css={[Function]}
                    data-itemid="keith-richards"
                    data-testid="keith-richards"
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                  >
                    Keith Richards
                  </p>
                </div>
              </div>
            </div>
          </article>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Design System/Asset Matching SectionHeader 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "alignItems": "space-between",
        "display": "flex",
        "flexDirection": "column",
        "marginTop": "0.625rem",
        "textAlign": "center",
        "width": "100%",
      }
    }
  >
    <h2>
      ⬇️Header section can be used separately for handling bulk actions⬇️
    </h2>
    <header
      className="css-pifv7b-SectionHeader"
    >
      <div
        className="css-zj67xr-CheckBoxContainer"
      >
        <span
          className="css-58ep04-CheckBox"
        >
          <span
            className="css-16p0htb-CheckBox"
          >
            <input
              checked={false}
              className="css-1935wu5-CheckBox"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              htmlFor="styled-checkbox-"
            />
          </span>
        </span>
        <div
          className="css-zj67xr-CheckBoxContainer"
        >
          <span
            css={
              Object {
                "color": "black",
              }
            }
          >
            2 items selected
          </span>
        </div>
      </div>
      <div
        css={
          Object {
            "map": undefined,
            "name": "qmf9se",
            "next": undefined,
            "styles": "
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
",
            "toString": [Function],
          }
        }
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "qmf9se",
              "next": undefined,
              "styles": "
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
",
              "toString": [Function],
            }
          }
        >
          <div
            css={[Function]}
            data-testid="primary_action"
          >
            <button
              className="css-1v3xdr2-Button"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="css-1xr6sam-Button"
              >
                <span
                  className="css-1kner5m-Button"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-116ea5o-Icon"
                    />
                  </span>
                </span>
                <span
                  className="css-5zv1of-Button"
                >
                  Confirm
                </span>
              </span>
            </button>
          </div>
          <div
            css={[Function]}
            data-testid="primary_action"
          >
            <button
              className="css-1v3xdr2-Button"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="css-1xr6sam-Button"
              >
                <span
                  className="css-1kner5m-Button"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-116ea5o-Icon"
                    />
                  </span>
                </span>
                <span
                  className="css-5zv1of-Button"
                >
                  Reject
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          role="button"
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "1i430ov",
                "next": undefined,
                "styles": "
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  position: relative;
",
                "toString": [Function],
              }
            }
          >
            <div
              css={[Function]}
            >
              <button
                className="css-12o7hk-IconButton"
                color="neutralBlack-700"
                data-testid="icon-button-menu_btn"
                disabled={false}
                onClick={[Function]}
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-1k5aruc-Icon"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>
</div>
`;
